[TNOV-75] Fixed alignment of discussion posts relative to forum, and their comment entry fields.

--- a/frontend/src/Comment/CommentEntry.css
+++ b/frontend/src/Comment/CommentEntry.css
@@ -1,8 +1,8 @@
 .commentEntryContainer {
     padding: 1em;
     margin: auto;
-    min-width: 400px;
-    max-width: 50%;
+    width: 88.8%;
+    max-height: 15%;
   
     display: flex;
     flex-direction: column;
@@ -25,6 +25,7 @@
     resize: none;
     font-size: 1.2em;
     width: 100%;
+    height: 3em;
   }
   
   .commentButton {
