--- a/frontend/src/Forum/Forum.css
+++ b/frontend/src/Forum/Forum.css
@@ -55,4 +55,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-content: center;
+  margin-left: 6em;
 }
