--- a/frontend/src/User/User.css
+++ b/frontend/src/User/User.css
@@ -5,7 +5,6 @@
 .userContainer {
   display: flex;
   align-items: center;
-  margin-right: -5em;
 }
 
 .profilePic {
